# autoconfport

./: .gitignore  CODEOWNERS  README.md  autoconfbuild.sh  buildautoconf.sh  buildenv  cicd.groovy  failures.txt  portcrtenv.sh  setenv.sh
patches/: configure.patch  m4sh.m4.patch
patches/PR1/: README.md  config.guess.patch  configure.patch  general.m4.patch  local.at.patch  status.m4.patch
patches/PR2/: README.md  lang.m4.patch
patches/PR3/: README.md  local.at.patch
patches/build-aux/: config.guess.patch
patches/lib/autoconf/: general.m4.patch  status.m4.patch
patches/tests/: local.at.patch
tests/: firstbug.ac  firstbug.sh  genscan.sh  runbasic.sh
tests/ac_c_backslash/: genscan.sh
tests/basic/: cleanup.sh  configure.ac  configure.scan  genscan.sh  hello.c
tests/runcc/: cleanup.sh  configure.ac  genscan.sh
